<resources>
    <string name="app_name">Challenge7</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_title_1">Profile</string>
    <string name="menu_title_2">Home</string>
    <string name="menu_title_3">History</string>
    <string name="hint_username">User Name</string>
    <string name="hint_email">UserName@gmail.com</string>
    <string name="button_update">Update</string>
    <string name="buttton_logout">Logout</string>
    <string name="jan">JAN</string>
    <string name="ken">KEN</string>
    <string name="pon">PON</string>
    <string name="jankenpon">JANKENPON!!</string>
    <string name="landingpage1_text">Cara memainkan Janken sangat mirip dengan cara memainkan Batu-Gunting-Kertas yang biasa kalian mainkan</string>
    <string name="vs_player">VS PLAYER</string>
    <string name="landingpage2_text">Dapat ddimainkan dengan mode VS Player.</string>
    <string name="vs_com">VS COM</string>
    <string name="landingpage3_text">Dapat dimainkan juga dengan mode VS COM</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="checkbox_pilih_semua">Pilih semua</string>
    <string name="button_delete">Delete</string>
    <string name="button_cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_re_password">Re Entry Password</string>
    <string name="refresh">Refresh</string>
    <string name="hi_user_name_default">Hi, User Name</string>
    <string name="pilih_lawanmu_home">PILIH LAWANMU</string>
    <string name="user_name_vs_player">User Name  VS  Player</string>
    <string name="vs_player_menu">VS Player</string>
    <string name="user_name_vs_player_menu">User Name VS Player</string>
    <string name="user_name_vs_cpu">User Name VS CPU</string>
    <string name="setting_menu_pop_up">Setting</string>
    <string name="logout_menu_pop_up">Logout</string>
    <string name="history">History</string>
    <string name="hasil_permainan">Hasil Permainan</string>
    <string name="setting">Setting</string>
    <string name="sound">Sound</string>
    <string name="game_round">Game Round</string>
    <string name="input_number_max_5_round">Input Number Max 5 Round</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="result_menang">MENANG</string>
    <string name="result_seri">Seri!</string>
    <string name="result_com">COM</string>
    <string name="choice_rematch">Rematch?</string>
    <string name="choice_silahkan">%1$s Silahkan Pilih</string>
    <string name="player_2">PLayer 2</string>
    <string name="mode_permainan_player_vs_player">Mode Permainan : Player Vs Player</string>
    <string name="player_win">Player Win</string>
    <string name="username_menang">Username Menang</string>
</resources>