<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/maincolor"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".authentication.LoginFragment">

    <ImageView
        android:id="@+id/ivImageLogo"
        android:layout_width="69dp"
        android:layout_height="69dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvJan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/titillium_web_bold"
        android:text="@string/jan"
        android:textColor="@color/option2color"
        android:textSize="27sp"
        android:layout_marginTop="-55dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivImageLogo"
        app:layout_constraintStart_toEndOf="@id/ivImageLogo"
        app:layout_constraintTop_toTopOf="@id/ivImageLogo" />

    <TextView
        android:id="@+id/tvKen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/titillium_web_bold"
        android:text="@string/ken"
        android:textColor="@color/option2color"
        android:textSize="27sp"
        app:layout_constraintStart_toStartOf="@+id/tvJan"
        app:layout_constraintTop_toTopOf="@+id/tvJan" />

    <TextView
        android:id="@+id/tvPon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/titillium_web_bold"
        android:text="@string/pon"
        android:textColor="@color/option2color"
        android:textSize="27sp"
        app:layout_constraintStart_toStartOf="@+id/tvKen"
        app:layout_constraintTop_toTopOf="@+id/tvKen" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/titillium_web_bold"
        android:text="Welcome"
        android:textColor="@color/option2color"
        android:textSize="40sp"
        android:shadowColor="@color/shadow"
        android:shadowDy="10"
        android:shadowRadius="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/titillium_web_bold"
        android:text="Back"
        android:shadowColor="@color/shadow"
        android:shadowDy="10"
        android:shadowRadius="1"
        android:textColor="@color/option2color"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvWelcome" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:paddingStart="16dp"
        android:background="@drawable/edit_text_rounded"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/secondarycolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBack" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:paddingStart="16dp"
        android:background="@drawable/edit_text_rounded"
        android:hint="@string/hint_password"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/secondarycolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="131dp"
        android:layout_height="43dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/button"
        android:elevation="4dp"
        android:fontFamily="@font/titillium_web_regular"
        android:paddingBottom="5dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/maincolor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/edtPassword"
        app:layout_constraintStart_toStartOf="@id/edtPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/titillium_web_regular"
        android:shadowColor="@color/shadow"
        android:shadowDy="8"
        android:shadowRadius="1"
        android:text="@string/sign_up"
        android:textColor="@color/optioncolor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>