<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".history.HistoryDetailActivity"
    android:background="@color/maincolor">

    <View
        android:id="@+id/viewTopBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/secondarycolor"
        android:layout_alignParentTop="true"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_arrow_back"
        android:layout_marginTop="10dp"
        android:id="@+id/ivBack"
        app:tint="@color/option2color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/hasil_permainan"
        android:fontFamily="@font/titillium_web_regular"
        android:textColor="@color/option2color"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/ivBack"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/titillium_web_bold"
        android:textColor="@color/secondarycolor"
        android:textSize="14sp"
        android:layout_below="@id/viewTopBar"
        android:layout_alignParentStart="true"
        android:layout_margin="20dp"
        tools:text="Senin 29, Agu 2022" />

    <TextView
        android:id="@+id/tvHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/titillium_web_regular"
        android:textColor="@color/secondarycolor"
        android:textSize="13sp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/viewTopBar"
        android:layout_margin="20dp"
        tools:text="11:09:44" />

    <TextView
        android:id="@+id/tvHasilPermainan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDate"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/titillium_web_bold"
        android:text="@string/player_win"
        android:textColor="@color/secondarycolor" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHasilPermainan"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/titillium_web_bold"
        android:text="@string/username_menang"
        android:textColor="@color/secondarycolor" />

    <TextView
        android:id="@+id/tvHasilPermainan2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/titillium_web_regular"
        android:text="@string/mode_permainan_player_vs_player"
        android:textColor="@color/secondarycolor"
        android:textSize="13sp"
        android:layout_below="@+id/tvUserName"
        android:layout_alignParentStart="true"/>

</RelativeLayout>