<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/maincolor"
    tools:context=".SplashScreen">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_background"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="77dp" />

    <ImageView
        android:id="@+id/ivImageLogo"
        android:layout_width="180dp"
        android:layout_height="220dp"
        android:layout_marginEnd="110dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvJan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="170dp"
        android:fontFamily="@font/titillium_web_bold"
        android:text="@string/jan"
        android:textColor="@color/optioncolor"
        android:textSize="61sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivImageLogo"
        app:layout_constraintStart_toEndOf="@+id/ivImageLogo"
        app:layout_constraintTop_toTopOf="@+id/ivImageLogo" />

    <TextView
        android:id="@+id/tvKen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/titillium_web_bold"
        android:text="@string/ken"
        android:textColor="@color/optioncolor"
        android:textSize="61sp"
        app:layout_constraintStart_toStartOf="@+id/tvJan"
        app:layout_constraintTop_toTopOf="@+id/ivImageLogo" />

    <TextView
        android:id="@+id/tvPon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:fontFamily="@font/titillium_web_bold"
        android:text="@string/pon"
        android:textColor="@color/optioncolor"
        android:textSize="61sp"
        app:layout_constraintStart_toStartOf="@+id/tvKen"
        app:layout_constraintTop_toTopOf="@+id/ivImageLogo" />


</androidx.constraintlayout.widget.ConstraintLayout>